--- a/assets/src/css/Header.css
+++ b/assets/src/css/Header.css
@@ -5,7 +5,6 @@
   margin-bottom: 1rem;
 }
 
-
 hr {
   margin: 0.5rem 0px;
   border: 0;
@@ -33,3 +32,9 @@ hr {
   font-size: 1.5rem;
 }
 
+
+.logo__image {
+  height: 3rem;
+  width: 3rem;
+  object-fit: cover;
+}
